Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56056

Crash on cancel QQuickImageResponse in QQuickAsyncImageProvider

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.3
    • 5.6.1, 5.7.1
    • None
    • x86 Win7 Qt5.6.1 MSVC2015; arm Debian Jessie Qt5.6.1 gcc 4.9.2

      Cancelled jobs in QQuickPixmapReader::processJobs in qtdeclarative\src\quick\util\qquickpixmapcache.cpp are deleted with deleteLater right after cancelling. If the QQuickImageResponse has QRunnable as base like suggested in the docs, the run method is still performing causing the program to crash on accessing members or emitting finished.

        1. output.txt
          0.2 kB
          Stefan Neubert
        2. quickPart.zip
          2 kB
          Stefan Neubert
        For Gerrit Dashboard: QTBUG-56056
        # Subject Branch Project Status CR V

            tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
            sneubert Stefan Neubert
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes